# github-manager

./: LICENSE  README.md  actions.py  get_team_pull_requests.py  main.py  pyproject.toml
